Add 'Add Products' button

--- a/Sukhdari_Server/Pages/Store/Products.razor
+++ b/Sukhdari_Server/Pages/Store/Products.razor
@@ -16,6 +16,12 @@
             </div>
 
             <div class="d-flex float-right">
+                <a href="/addProductsInBulk" class="mr-2">
+                    <button class="btn btn-info text-white">
+                        <span class="oi oi-cloud-upload mr-0 mr-md-2" />
+                        <h5 class="d-md-inline-block d-none pt-1">Add Products</h5>
+                    </button>
+                </a>
                 <a href="/addProduct">
                     <button class="btn btn-info text-white">
                         <span class="oi oi-plus mr-0 mr-md-2" />
