--- a/Sukhdari_Server/Shared/Sidebar.razor
+++ b/Sukhdari_Server/Shared/Sidebar.razor
@@ -14,7 +14,7 @@
           <img src="https://cdn-icons-png.flaticon.com/512/21/21104.png" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">@username</a>
+          <a href="profile" class="d-block">@username</a>
         </div>
       </div>
 
