--- a/Sukhdari_Client/Pages/Product.razor
+++ b/Sukhdari_Client/Pages/Product.razor
@@ -1,10 +1,12 @@
 ﻿@page "/stores/product/{Id:int}/{StoreId:int}"
 @layout StoreLayout
 @inject IStoreService Store
+@inject Microsoft.Extensions.Configuration.IConfiguration config
+
 
 <div class="col-11 card m-5">
     <div class="col-12 m-2">
-        <a href="@($"stores/store/{StoreId}")">
+        <a href="@($"{@config["AppBasePath"]}stores/store/{StoreId}")">
             <h1 class="text-dark oi oi-circle-x"></h1>
         </a>
     </div>
@@ -51,13 +53,13 @@
                                     if (idx == 0)
                                     {
                                         <div class="carousel-item active" style="height: 100%;">
-                                            <img class="d-block w-100" src="@image.ProductImageUrl" onerror="this.src = '/Images/product.png';" alt="First slide">
+                                            <img class="d-block w-100" src="@image.ProductImageUrl" onerror="@($"this.src = {@config["AppBasePath"]}Images/product.png;")" alt="First slide">
                                         </div>
                                     }
                                     else
                                     {
                                         <div class="carousel-item" style="height: 100%;">
-                                            <img class="d-block w-100" src="@image.ProductImageUrl" onerror="this.src = '/Images/product.png';" alt="Second slide">
+                                            <img class="d-block w-100" src="@image.ProductImageUrl" onerror="@($"this.src = {@config["AppBasePath"]}Images/product.png;")" alt="Second slide">
                                         </div>
                                     }
                                     idx = 1;
@@ -66,7 +68,7 @@
                             else
                             {
                                 <div class="carousel-item active" style="height: 100%;">
-                                     <img class="d-block w-100" src="/Images/product.png" onerror="this.src = '/Images/product.png';" alt="Second slide">
+                                     <img class="d-block w-100" src=$"{@config["AppBasePath"]}/Images/product.png" onerror="@($"this.src = {@config["AppBasePath"]}Images/product.png;")" alt="Second slide">
                                 </div>
                             }
                         }
@@ -110,7 +112,7 @@
                 <p>@specificProduct.Description</p>
             </div>
             <div>
-                <a href= @($"stores/store/{StoreId} class="btn btn-primary col-5">Close</a>
+                <a href= @($"{@config["AppBasePath"]}stores/store/{StoreId} class="btn btn-primary col-5">Close</a>
             </div>
         </div>
 
