--- a/Sukhdari_Client/Pages/SpecificStore.razor
+++ b/Sukhdari_Client/Pages/SpecificStore.razor
@@ -2,6 +2,8 @@
 @layout StoreLayout
 @inject IStoreService Store
 @inject IUserIpService userIp
+@inject Microsoft.Extensions.Configuration.IConfiguration config
+
 
 @*<h1>@ipAddress.IP</h1>
 <h1>@ipAddress.timeNow</h1>*@
@@ -120,23 +122,20 @@
                                 @if (imageIndex == 0)
                                 {
                                     <div class="carousel-item active">
-                                        <img class="card-img-top" src="@image.ProductImageUrl" onerror="this.src = '/Images/product.png';" alt="Product image cap" />
-                                    </div> 
-                                }
+                                        <img class="card-img-top" src="@image.ProductImageUrl" onerror="@($"this.src = {@config["AppBasePath"]}Images/product.png;")" alt="Product image cap" />
+                                    </div> }
                                 else
                                 {
                                     <div class="carousel-item">
-                                        <img class="card-img-top" src="@image.ProductImageUrl" onerror="this.src = '/Images/product.png';" alt="Product image cap" />
-                                    </div>
-                                }
-                                imageIndex++;
+                                        <img class="card-img-top" src="@image.ProductImageUrl" onerror="@($"this.src = {@config["AppBasePath"]}Images/product.png;")" alt="Product image cap" />
+                                    </div>}imageIndex++;
                             }
                             @{imageIndex = 0;}
                             
                             @if (product.ProductImages.Count == 0)
                             {
                                 <div class="carousel-item active">
-                                    <img class="card-img-top" src="/Images/product.png" onerror="this.src = '/Images/product.png';" alt="Product image cap" />
+                                    <img class="card-img-top" src=@($"{@config["AppBasePath"]}/Images/product.png") onerror="@($"this.src = {@config["AppBasePath"]}Images/product.png;")" alt="Product image cap" />
                                 </div>
                             }
 
