--- a/Sukhdari_Client/App.razor
+++ b/Sukhdari_Client/App.razor
@@ -4,8 +4,7 @@
 @inject LazyAssemblyLoader AssemblyLoader
 @inject ILogger<App> Logger
 
-<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true" AdditionalAssemblies="@lazyLoadedAssemblies"
-        OnNavigateAsync="@OnNavigateAsync">
+<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(HomeLayout)" />
     </Found>
@@ -19,27 +18,5 @@
 @code {
     private List<Assembly> lazyLoadedAssemblies = new();
 
-    private async Task OnNavigateAsync(NavigationContext args)
-    {
-        try
-        {
-
-            if (args.Path.StartsWith(""))
-            {
-                var assemblies = await AssemblyLoader.LoadAssembliesAsync(
-                    new[] { "System.Private.Xml.dll" });
-                assemblies = await AssemblyLoader.LoadAssembliesAsync(
-                new[] { "System.Data.Common.dll" });
-                assemblies = await AssemblyLoader.LoadAssembliesAsync(
-                new[] { "Newtonsoft.Json.dll" });
-                assemblies = await AssemblyLoader.LoadAssembliesAsync(
-                new[] { "System.Linq.Expressions.dll" });
-                
-            }
-        }
-        catch (Exception ex)
-        {
-            Logger.LogError("Error: {Message}", ex.Message);
-        }
-    }
+   
 }
