--- a/Sukhdari_Client/Pages/Product.razor
+++ b/Sukhdari_Client/Pages/Product.razor
@@ -121,7 +121,7 @@
                 }
             </div>
             <div>
-                <a href= @($"{@config["AppBasePath"]}stores/store/{StoreId} class="btn btn-primary col-5">Close</a>
+                <a href="@($"{@config["AppBasePath"]}stores/store/{StoreId}")" class="btn btn-primary col-5">Close</a>
             </div>
         </div>
 
