--- a/Sukhdari_Client/Pages/SpecificStore.razor
+++ b/Sukhdari_Client/Pages/SpecificStore.razor
@@ -232,7 +232,7 @@
 
     // I am Adding
     private List<CategoryAttributesDTO> Attributes = new List<CategoryAttributesDTO>(); //To store category attributes
-    public List<String> selectedAttributes = new List<String>(); // To store IDs of Attributes which the user will select
+    public List<string> selectedAttributes = new List<string>(); // To store IDs of Attributes which the user will select
     public List<String> attributeValues = new List<String>(); // To store the values of attributes so that the same value appears only once
     public List<ProductDTO> CategoryAttributesProducts { get; set; }
     // I have Added
