--- a/Sukhdari_Client/Pages/About.razor
+++ b/Sukhdari_Client/Pages/About.razor
@@ -9,16 +9,36 @@
         </a>
     </div>
 
-    <div class="">
-        <h1>About Us</h1>
-        <p>Here we will display the store description given by the store owner.</p>
-        <h1>Location</h1>
-        <p>and here we will show the store address</p>
-    </div>
+    @if(Stores!=null)
+    {
+        <div class="">
+            <h1>About Us</h1>
+            <p>@description</p>
+            <h1>Location</h1>
+            <p>@Stores.Address</p>
+        </div>
+    }
 </div>
 
 @code
 {
     [Parameter]
     public int StoreId { get; set; }
+
+    private StoreDTO Stores;
+    private string description;
+
+    protected override async Task OnInitializedAsync()
+    {
+        Stores = await Store.GetStoreByIdAsync(StoreId);
+        description = Stores.Description;
+        // if(Stores.Description == null)
+        // {
+        //     description = "This store has no description";
+        // }
+        // else
+        // {
+        //     description = Stores.Description;
+        // }
+    }
 }
