--- a/Sukhdari_Client/Pages/Index.razor
+++ b/Sukhdari_Client/Pages/Index.razor
@@ -41,115 +41,153 @@
 
 <div class="row m-0">
     <div class="card bg-light col-2 m-2 p-2 filterDiv" style="left:1% ">
-        <h4>Filters</h4>
-        <hr />
-        <h5>Location</h5>
-        <div class="form-check ml-2">
-            @if (AllStores != null && AllStores.Any())
-            {
-                @foreach (var store in AllStores)
+        <form>
+            @* Uncomment the following code if you're handling multiple countries *@
+            @* <h4>Filters</h4>
+            <hr />
+            <h5>Location</h5>
+            <div class="form-check ml-2">
+                @if (AllStores != null && AllStores.Any())
                 {
-                    @if (!countries.Contains(store.Country))
+                    @foreach (var store in AllStores)
                     {
-                        countries.Add(store.Country);
+                        @if (!countries.Contains(store.Country))
+                        {
+                            countries.Add(store.Country);
+                        }
                     }
                 }
-            }
-            @foreach (var country in countries)
-                {
-                    <input class="form-check-input" type="checkbox" @onchange="@(async (e) => await CheckboxClicked(country, e.Value))">
-                    <label class="form-check-label" for="flexCheckDefault">
-                        @country
-                    </label>
-                     <br />    
-                }
+                @foreach (var country in countries)
+                    {
+                        <input class="form-check-input" type="checkbox" @onchange="@(async (e) => await CheckboxClicked(country, e.Value))">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            @country
+                        </label>
+                         <br />    
+                    }
                
-        </div>
-        <hr />
-        <h5>Price</h5>
-        <div class="ml-2 row">
-            <input type="number" class="col-5 p-0 mr-1" @bind-value="min" />
-            <input type="number" class="col-5 p-0" @bind-value="max" />
-        </div>
-        <div>
-            <br />
-            <div class="ml-2">
-            <button class="col-5 mr-1 btn btn-primary" type="submit" @onclick="findStoresByPrice">Search</button>
-            <button class="col-5 btn btn-success" type="submit" @onclick="ResetStores">Reset</button>
             </div>
-        </div>
-        <hr />
+            <hr /> *@
 
-        <h5>Store Type</h5>
-        <div class="form-check ml-2">
-            @if (FilteredStores != null && FilteredStores.Any())
-            {
-                @foreach (var type in FilteredStores)
+            <h5>PRICE</h5>
+            <div class="ml-2 row">
+                <input type="number" class="col-5 p-0 mr-1" @bind-value="min" />
+                <input type="number" class="col-5 p-0" @bind-value="max" />
+            </div>
+            <div>
+                <br />
+                <div class="ml-2">
+                <button class="col-5 mr-1 btn btn-primary" type="submit" @onclick="findStoresByPrice">Search</button>
+                @* <button class="col-5 btn btn-success" type="submit" @onclick="ResetStores">Reset</button> *@
+                <input type="reset" value="Reset" class="col-5 btn btn-success" @onclick="ResetStores" />
+                </div>
+            </div>
+            <hr />
+
+            <h5>STORE TYPE</h5>
+            <div class="form-check ml-2">
+                @if (FilteredStores != null && FilteredStores.Any())
                 {
-                    @if (!storeTypes.Contains(type.Type))
+                    @foreach (var type in FilteredStores)
                     {
-                        storeTypes.Add(type.Type);
+                        @if (!storeTypes.Contains(type.Type))
+                        {
+                            storeTypes.Add(type.Type);
+                        }
                     }
                 }
-            }
-            @foreach (var type in storeTypes)
+                @foreach (var type in storeTypes)
+                    {
+                        <input class="form-check-input" type="checkbox" @onchange="@(async (e) => await StoreTypeCheckbox(type, e.Value))">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            @type
+                        </label>
+                         <br />    
+                    }
+            </div>
+            <hr />
+
+
+            @if(Attributes!= null && Attributes.Count>0)
+            {
+                foreach(var storeAttrib in Attributes)
                 {
-                    <input class="form-check-input" type="checkbox" @onchange="@(async (e) => await StoreTypeCheckbox(type, e.Value))">
-                    <label class="form-check-label" for="flexCheckDefault">
-                        @type
-                    </label>
-                     <br />    
+                    <h5>@storeAttrib.ToUpper()</h5>
+                    foreach(var store in Stores)
+                    {
+                        if (store.Attributes != null && store.Attributes.Count > 0)
+                        {
+                            foreach (var attrib in store.Attributes)
+                            {
+                                if(attrib.Key.ToLower() == storeAttrib)
+                                {
+                                    if (!AttributeValues.Contains(attrib.Value.ToLower()))
+                                    {
+                                        <div class="form-check ml-2">
+                                            <input type="checkbox" class="form-check-input" @onchange="@(async (e)=> await HandleAttributesCheckBox(attrib, e.Value))" />
+                                            <label class="form-check-label">@attrib.Value</label>
+                                        </div>
+                                        AttributeValues.Add(attrib.Value.ToLower());
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
-        </div>
-
-        <h5>Discount</h5>
-        <div class="form-check ml-2">
-
-           @if(checkBoxIndex[0] == 0)
-            {
-                <input type="checkbox" class="form-check-input" @onchange="@((e) => DiscountCheckboxClicked(25, 0, e.Value))" >
-                <label class="form-check-label">Upto 25%</label><br />
+                <hr />
+                AttributeValues.Clear();
             }
-            else if(checkBoxIndex[0] == 1)
-            {
-                <input type="checkbox" class="form-check-input" @onchange="@((e) => DiscountCheckboxClicked(25, 0, e.Value))" checked>
-                <label class="form-check-label">Upto 25%</label><br />
-            }
+        
+
+            <h5>DISCOUNT</h5>
+            <div class="form-check ml-2">
+
+               @if(checkBoxIndex[0] == 0)
+                {
+                    <input type="checkbox" class="form-check-input" @onchange="@((e) => DiscountCheckboxClicked(25, 0, e.Value))" >
+                    <label class="form-check-label">Upto 25%</label><br />
+                }
+                else if(checkBoxIndex[0] == 1)
+                {
+                    <input type="checkbox" class="form-check-input" @onchange="@((e) => DiscountCheckboxClicked(25, 0, e.Value))" checked>
+                    <label class="form-check-label">Upto 25%</label><br />
+                }
                 
-            @if(checkBoxIndex[1] == 0)
-            {
-                <input class="form-check-input" type="checkbox" @onchange="@((e) => DiscountCheckboxClicked(50, 1, e.Value))">
-                <label class="form-check-label">Upto 50%</label><br />
-            }
-            else if(checkBoxIndex[1] == 1)
-            {
-                <input class="form-check-input" type="checkbox" @onchange="@((e) => DiscountCheckboxClicked(50, 1, e.Value))" checked>
-                <label class="form-check-label">Upto 50%</label><br />
-            }
-            @if(checkBoxIndex[2] == 0)
-            {
-                <input class="form-check-input" type="checkbox" @onchange="@((e) => DiscountCheckboxClicked(75, 2, e.Value))" >
-                <label class="form-check-label">Upto 75%</label><br />
+                @if(checkBoxIndex[1] == 0)
+                {
+                    <input class="form-check-input" type="checkbox" @onchange="@((e) => DiscountCheckboxClicked(50, 1, e.Value))">
+                    <label class="form-check-label">Upto 50%</label><br />
+                }
+                else if(checkBoxIndex[1] == 1)
+                {
+                    <input class="form-check-input" type="checkbox" @onchange="@((e) => DiscountCheckboxClicked(50, 1, e.Value))" checked>
+                    <label class="form-check-label">Upto 50%</label><br />
+                }
+                @if(checkBoxIndex[2] == 0)
+                {
+                    <input class="form-check-input" type="checkbox" @onchange="@((e) => DiscountCheckboxClicked(75, 2, e.Value))" >
+                    <label class="form-check-label">Upto 75%</label><br />
                     
-            }
-            else if(checkBoxIndex[2] == 1)
-            {
-                <input class="form-check-input" type="checkbox" @onchange="@((e) => DiscountCheckboxClicked(75, 2, e.Value))" checked>
-                <label class="form-check-label">Upto 75%</label><br />
-            }
+                }
+                else if(checkBoxIndex[2] == 1)
+                {
+                    <input class="form-check-input" type="checkbox" @onchange="@((e) => DiscountCheckboxClicked(75, 2, e.Value))" checked>
+                    <label class="form-check-label">Upto 75%</label><br />
+                }
             
-        </div>
+            </div>
       
-
+        </form>
     </div>
+    
 
     <div class="form-inline justify-content-center mt-4 col-9">
         @if (Stores == null)
         {
-        <div style="top:50%;left:53%;margin-top:-50px;margin-left:-100px;">
-            <img src="Images/loader.gif" />
-        </div> 
-            }
+            <div style="top:50%;left:53%;margin-top:-50px;margin-left:-100px;">
+                <img src="Images/loader.gif" />
+            </div> 
+        }
         else if (Stores != null && Stores.Any())
         {
             @foreach (var store in FilteredStores)
@@ -266,6 +304,12 @@
     int min = 0;
     int max = 10000;
 
+    //My Code
+    public List<string> Attributes { get; set; } = new List<string>(); //It'll store attributes of all stores
+    public List<StoreAttributesDTO> selectedAttributes = new List<StoreAttributesDTO>(); // To store IDs of Attributes which the user have selected
+    public List<String> AttributeValues { get; set; } = new List<string>(); //To avoid duplicate attribute values
+                                                                            //My code ends here
+
     public List<string> selectedCountries = new List<string>();
     protected override async Task OnInitializedAsync()
     {
@@ -274,9 +318,26 @@
         FilteredStores = Stores;
         AllTags = await Store.getAllStoreTags();
 
+        if(Stores != null && Stores.Any()) //This portion is going to store the attributes of all Stores in 'Attributes'' property
+        {
+            foreach(var store in Stores)
+            {
+                if(store.Attributes!= null && store.Attributes.Count>0)
+                {
+                    foreach(var attrib in store.Attributes)
+                    {
+                        if(!Attributes.Contains(attrib.Key.ToLower())) //To avoid duplication
+                        {
+                            Attributes.Add(attrib.Key.ToLower());
+                        }
+                    }
+                }
+            }
+        }
+
         if(Stores != null && Stores.Any())
         {
-             var storeID = Stores.OrderByDescending(i => i.Id).FirstOrDefault().Id;
+            var storeID = Stores.OrderByDescending(i => i.Id).FirstOrDefault().Id;
             storeID = storeID + 1;
             array = new float[storeID];
             foreach(var store in Stores)
@@ -294,8 +355,8 @@
                 array[store.Id] = maxDiscount.Value;
             }
         }
-       
-        
+
+
     }
     public async Task searchByRange()
     {
@@ -351,7 +412,8 @@
         max = 10000;
         Stores = await Store.getAllStores();
         FilteredStores = Stores;
-
+        selectedAttributes.Clear();
+        AttributeValues.Clear();
     }
     public async Task searchResults()
     {
@@ -470,5 +532,36 @@
         }
     }
 
-
+    public async Task HandleAttributesCheckBox(StoreAttributesDTO attributeValue, object checkedValue)
+    {
+        if((bool)checkedValue)
+        {
+            selectedAttributes.Add(attributeValue);
+        }
+        else
+        {
+            selectedAttributes.Remove(attributeValue);
+        }
+        if(selectedAttributes.Any()) //Handling multiple Store Attributes Selection
+        {
+            List<StoreDTO> stores = new List<StoreDTO>();
+            List<StoreDTO> AttributeFilteredStores = new List<StoreDTO>();
+            foreach(var attrib in selectedAttributes)
+            {
+                foreach(var store in Stores)
+                {
+                    var result = store.Attributes.Where(i => i.Value.ToLower() == attrib.Value.ToLower());
+                    if (result.Any())
+                        AttributeFilteredStores.Add(store);
+                }
+                stores = stores.Union(AttributeFilteredStores).ToList();
+                AttributeFilteredStores.Clear();
+            }
+            FilteredStores = stores;
+        }
+        else
+        {
+            await ResetStores();
+        }
+    }
 }
