--- a/Sukhdari_Server/Pages/Store/AddCategory.razor
+++ b/Sukhdari_Server/Pages/Store/AddCategory.razor
@@ -153,7 +153,7 @@
         CategoryDetails.Name = "";
         CategoryDetails.Description = "";
         StateHasChanged();
-        //Navigator.NavigateTo("/category");
+        Navigator.NavigateTo("/category");
         await JsRuntime.ToastrSuccess(message);
 
     }
